implemented spanish language

--- a/es/contact.html
+++ b/es/contact.html
@@ -19,11 +19,11 @@
   <!-- Google Fonts Sen -->
   <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
   <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
   <!-- Material Design Bootstrap -->
-  <link rel="stylesheet" href="css/mdb.min.css">
+  <link rel="stylesheet" href="/css/mdb.min.css">
   <!-- Custom styles -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -33,7 +33,7 @@
       <div class="preloader-inner position-relative">
         <div class="preloader-circle"></div>
         <div class="preloader-img">
-          <img src="img/brand/soufun-preloader.png" class="spin-loader" alt="load-soufun-logo">
+          <img src="/img/brand/soufun-preloader.png" class="spin-loader" alt="load-soufun-logo">
         </div>
       </div>
     </div>
@@ -42,7 +42,7 @@
 
   <!-- Start of project here-->
   <div id="fb-root"></div>
-  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0"></script>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v7.0"></script>
   <!--Main Navigation-->
   <header id="page-top">
     <!-- Navbar -->
@@ -50,7 +50,7 @@
       <div class="container">
         <!-- Brand -->
         <a class="navbar-brand waves-effect js-scroll-trigger" href="#page-top">
-          <img src="img/brand/soufunlogo-variant-2-icon.png" height="20" width="60" alt="brand">
+          <img src="/img/brand/soufunlogo-variant-2-icon.png" height="20" width="60" alt="brand">
         </a>
         <!-- Collapse -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,33 +61,33 @@
           <!-- Left -->
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="index.html">Games</a>
+              <a class="nav-link waves-effect" href="index.html">Juegos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="about.html">About us</a>
+              <a class="nav-link waves-effect" href="about.html">Nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="projects.html">Projects</a>
+              <a class="nav-link waves-effect" href="projects.html">Proyectos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="services.html">Services</a>
+              <a class="nav-link waves-effect" href="services.html">Servicios</a>
             </li>
             <li class="nav-item">
               <a class="nav-link waves-effect disabled" href="blog.html">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect disabled" href="store.html">Store</a>
+              <a class="nav-link waves-effect disabled" href="store.html">Tienda</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link waves-effect teal lighten-2 rounded js-scroll-trigger" href="#page-top">Contact<span class="sr-only">(current)</span></a>
+              <a class="nav-link waves-effect teal lighten-2 rounded js-scroll-trigger" href="#page-top">Contacto<span class="sr-only">(current)</span></a>
             </li>
             <!-- Dropdown -->
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="fas fa-language"></i> Language </a>
+                <i class="fas fa-language"></i> Lenguaje </a>
               <div class="dropdown-menu dropdown-info" aria-labelledby="navbarDropdownMenuLink-4">
-                <a class="dropdown-item" href="http://soufunstudio.com/es">Spanish</a>
-                <a class="dropdown-item" href="http://soufunstudio.com/jp">Japanese</a>
+                <a class="dropdown-item" href="/">English</a>
+                <a class="dropdown-item" href="/jp">日本語</a>
               </div>
             </li>
           </ul>
@@ -122,7 +122,7 @@
           <div class="col-md-12">
             <!-- Brand -->
             <a class="navbar-brand">
-              <img src="img/brand/soufun-brand.png" height="200" alt="logo">
+              <img src="/img/brand/soufun-brand.png" height="200" alt="logo">
             </a>
           </div>
         </div>
@@ -149,7 +149,7 @@
           <!--Grid column-->
           <div class="col-md-4">
             <!--Twitter-->
-            <a href="https://twitter.com/SouFUNStudio?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="true" data-size="large" data-show-screen-name="false"></a>
+            <a href="https://twitter.com/SouFUNStudio?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="true" data-size="large" data-show-screen-name="false" data-lang="es"></a>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
           </div>
           <!--Grid column-->
@@ -173,13 +173,13 @@
         <section class="text-white mb-5">
 
           <!-- Section heading -->
-          <h6 class="font-weight-bold text-center text-white text-uppercase small mb-4 pt-5">contact</h6>
-          <h3 class="font-weight-bold text-center mb-4">Contact Us</h3>
+          <h6 class="font-weight-bold text-center text-white text-uppercase small mb-4 pt-5">contacto</h6>
+          <h3 class="font-weight-bold text-center mb-4">Contáctanos</h3>
           <!-- Section description -->
-          <p class="text-center w-responsive mx-auto pb-5">If you are interested in the services we offer
-            such as gamification, virtual reality or augmented reality and video game creation,
-            do not hesitate to contact us and send us a message to contact you.
-            So we can give you a quote for the project you have in mind.</p>
+          <p class="text-center w-responsive mx-auto pb-5">Si estás interesado en los servicios que ofrecemos
+            como gamificación, realidad virtual o realidad aumentada y creación de videojuegos,
+            no dudes en contactarnos y enviarnos un mensaje para platicar de algún proyecto.
+            Entonces podemos darte una cotización para el proyecto que tiene en mente.</p>
 
           <!-- Grid row -->
           <div class="row d-flex justify-content-center text-center mb-4">
@@ -187,7 +187,8 @@
             <div class="col-lg-9 z-depth-1">
               <!-- Cite -->
               <blockquote class="blockquote">
-                <p class="white-text">Innovation comes from people meeting up in the hallways.</p>
+                <p class="white-text">
+                  La innovación proviene de personas que se encuentran en los pasillos.</p>
                 <footer class="blockquote-footer mb-4 white-text"><cite title="Source Title">Steve Jobs.</cite></footer>
               </blockquote>
               <!-- Cite -->
@@ -203,13 +204,13 @@
             <div class="col-lg-5 mb-lg-0 pb-lg-3 mb-4">
 
               <!-- Form with header -->
-              <form id="contact-form" name="contact-form" action="mail.php" method="post">
+              <form id="contact-form" name="contact-form" action="/mail.php" method="post">
                 <!--Card-->
                 <div class="card card-contact bg-card wow fadeInRight" data-wow-delay="0.3s">
                   <!--Header-->
                   <div class="card-header card-header-primary text-center">
                     <h3 class="white-text font-weight-bold">
-                      <i class="fa fa-user white-text"></i> Contact:</h3>
+                      <i class="fa fa-user white-text"></i> Contacto:</h3>
                   </div>
                   <!-- Card Body-->
                   <div class="card-body">
@@ -217,22 +218,22 @@
                     <div class="md-form">
                       <i class="fas fa-user prefix white-text"></i>
                       <input type="text" id="name" name="name" class="white-text form-control" required>
-                      <label for="name">Your name</label>
+                      <label for="name">Tu nombre</label>
                     </div>
                     <div class="md-form">
                       <i class="fas fa-envelope prefix white-text"></i>
                       <input type="text" id="email" name="email" class="white-text form-control" required>
-                      <label for="email">Your email</label>
+                      <label for="email">Tu correo</label>
                     </div>
                     <div class="md-form">
                       <i class="fas fa-tag prefix white-text"></i>
                       <input type="text" id="subject" name="subject" class="white-text form-control" required>
-                      <label for="subject">Subject</label>
+                      <label for="subject">Asunto</label>
                     </div>
                     <div class="md-form">
                       <i class="fas fa-pencil-alt prefix white-text"></i>
                       <textarea type="text" id="message" name="message" class="white-text form-control md-textarea" rows="5" required></textarea>
-                      <label for="message">Send message</label>
+                      <label for="message">Enviar mensaje</label>
                     </div>
                     <div class="text-center">
                       <button class="btn btn-outline-contact btn-rounded" onclick="validateForm();">Submit</button>
@@ -273,14 +274,14 @@
                     <i class="fas fa-phone fa-lg"></i>
                   </a>
                   <p class="pt-3">+ 52 1 55 15 99 09 67</p>
-                  <p class="mb-md-0">Mon - Sat, 8:00-22:00</p>
+                  <p class="mb-md-0">Lun - Sab, 8:00-22:00</p>
                 </div>
                 <div class="col-md-4">
                   <a class="btn-contact waves-effect">
                     <i class="fas fa-envelope fa-lg"></i>
                   </a>
                   <p class="pt-3">contact@soufunstudio.com</p>
-                  <p class="mb-0">social@soufunstudio.com</p>
+                  <p class="mb-0">socialmedia@soufunstudio.com</p>
                 </div>
               </div>
             </div>
@@ -308,7 +309,7 @@
         <!-- Grid column -->
         <div class="col-md-6 mt-md-0 mt-3">
           <!-- Content -->
-          <h5 class="text-uppercase">Connect with us! <i class="fas fa-heart red-text mx-1"></i> </h5>
+          <h5 class="text-uppercase">Conéctate con nosotros! <i class="fas fa-heart red-text mx-1"></i> </h5>
           <!-- Grid column -->
           <div class="col-md-12 py-4">
             <div class="mb-5 hoverable-icon">
@@ -334,7 +335,7 @@
         <!-- Grid column -->
         <div class="col-md-3 mb-md-0 mb-3">
           <!-- Links -->
-          <h5 class="text-uppercase">Contact Us</h5>
+          <h5 class="text-uppercase">Contáctanos</h5>
           <ul class="list-unstyled hoverable-text">
             <li>
               <a href="https://web.whatsapp.com" target="_blank"><i class="fas fa-phone-alt"></i> +521 5515990967</a>
@@ -353,16 +354,16 @@
         <!-- Grid column -->
         <div class="col-md-3 mb-md-0 mb-3">
           <!-- Links -->
-          <h5>SouFunStudio</h5>
+          <h5>SouFun Studio</h5>
           <ul class="list-unstyled hoverable-text">
             <li>
-              <a href="frontend/commons/privacy_policy.html">Privacy policy</a>
+              <a href="frontend/commons/privacy_policy.html">Política de privacidad</a>
             </li>
             <li>
-              <a href="frontend/commons/terms_of_use.html">Terms of use</a>
+              <a href="frontend/commons/terms_of_use.html">Términos de uso</a>
             </li>
             <li>
-              <a href="contact.html">Sitemap</a>
+              <a href="contact.html">Mapa del sitio</a>
             </li>
             <li>
               <a href="frontend/info/faqs.html">FAQ</a>
@@ -382,10 +383,10 @@
           <a href="http://soufunstudio.com">© 2020 Copyright: soufunstudio.com</a>
         </li>
         <li class="list-inline-item">
-          <img src="img/brand/soufun-solid-logo.png" class="img-fluid" alt="soufun-solid-logo"></a>
+          <img src="/img/brand/soufun-solid-logo.png" class="img-fluid" alt="soufun-solid-logo"></a>
         </li>
         <li class="list-inline-item">
-          <a href="https://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&id=OFL" target="_blank">Sen font is licensed under the OFL.</a>
+          <a href="https://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&id=OFL" target="_blank">La fuente Sen tiene licencia bajo OFL.</a>
         </li>
       </ul>
     </div>
@@ -395,19 +396,19 @@
   <!-- End your project here-->
 
   <!-- jQuery -->
-  <script type="text/javascript" src="js/jquery.min.js"></script>
+  <script type="text/javascript" src="/js/jquery.min.js"></script>
   <!-- Bootstrap tooltips -->
-  <script type="text/javascript" src="js/popper.min.js"></script>
+  <script type="text/javascript" src="/js/popper.min.js"></script>
   <!-- Bootstrap core JavaScript -->
-  <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="/js/bootstrap.min.js"></script>
   <!-- MDB core JavaScript -->
-  <script type="text/javascript" src="js/mdb.min.js"></script>
+  <script type="text/javascript" src="/js/mdb.min.js"></script>
   <!-- Plugin JavaScript -->
-  <script type="text/javascript" src="js/jquery.easing.min.js"></script>
+  <script type="text/javascript" src="/js/jquery.easing.min.js"></script>
   <!-- Custom scripts (optional) -->
-  <script type="text/javascript" src="js/new-age.min.js"></script>
-  <script type="text/javascript" src="js/yanger.js"></script>
-  <script type="text/javascript" src="js/validating-form.js"></script>
+  <script type="text/javascript" src="/js/new-age.min.js"></script>
+  <script type="text/javascript" src="/js/yanger.js"></script>
+  <script type="text/javascript" src="/js/validating-form.js"></script>
 
   <!--Modal: modalCookie-->
   <div class="modal fade bottom cookieModal" id="cookieModal" tabindex="-1" role="dialog" aria-labelledby="cookieModalLabel" aria-hidden="true" data-backdrop="true">
@@ -418,10 +419,10 @@
         <div class="modal-body">
           <div class="row d-flex justify-content-center align-items-center">
 
-            <p class="pt-3 pr-2 white-text">We use cookies to improve your website experience</p>
+            <p class="pt-3 pr-2 white-text">Utilizamos cookies para mejorar la experiencia del sitio web.</p>
 
-            <a type="button" href="frontend/commons/privacy_statement.html" class="btn btn-outline-cookies waves-effect">Learn more<i class="fas fa-book ml-1"></i></a>
-            <a type="button" id="cookieModalConsent" class="btn btn-outline-cookies waves-effect" data-dismiss="modal">Ok, thanks</a>
+            <a type="button" href="frontend/commons/privacy_statement.html" class="btn btn-outline-cookies waves-effect">Saber más<i class="fas fa-book ml-1"></i></a>
+            <a type="button" id="cookieModalConsent" class="btn btn-outline-cookies waves-effect" data-dismiss="modal">Si, gracias</a>
           </div>
         </div>
       </div>
@@ -429,7 +430,7 @@
     </div>
   </div>
   <!--Modal: modalCookie-->
-  <script type="text/javascript" src="js/cookie-consent.js"></script>
+  <script type="text/javascript" src="/js/cookie-consent.js"></script>
 
 
 </body>
