--- a/es/services.html
+++ b/es/services.html
@@ -186,11 +186,12 @@
                 <div class="card-body">
                   <p class="mt-4 pt-2"><i class="fas fa-gamepad fa-4x text-white"></i></p>
                   <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#page-top">Gamificacion</a></h5>
-                  <p class="mb-4 text-white">¿Tienes un proyecto que quieres gamificado?
+                  <p class="mb-4 text-white">¿Tienes un proyecto que deseas sea gamificado?
                     No te preocupes, analizaremos tu proyecto y te daremos una
                     propuesta para gamificar y desarrollarlo. Si quieres saber más
                     sobre qué es la gamificación, puedes verlo
-                    <a class="text-info" href="https://www.bunchball.com/gamification" target="_blank">aquí</a></p>
+                    <a class="text-info" href="https://www.bunchball.com/gamification" target="_blank">aquí</a>
+                    no te quedes atrás, es lo de hoy.</p>
                 </div>
               </div>
             </div>
@@ -241,7 +242,7 @@
                   <p class="text-white mb-4">La realidad aumentada ha sido una de las más recientes
                     atracciones para todos los usuarios, como videojuegos, educación, entretenimiento general
                     e incluso películas, si quieres tener un proyecto de realidad aumentada en tus manos,
-                    lo desarrollaremos para ti.</p>
+                    lo desarrollaremos para ti, es una gran idea para impulsar negocios.</p>
                 </div>
               </div>
               <!--Card-->
@@ -258,7 +259,7 @@
                   <p class="text-white mb-4">Los juegos para PC siempre han sido uno de los más atractivos para los usuarios
                     a quienes siempre les gusta jugar desde la computadora. ¿Tienes una gran idea de un video
                     juego que quieres desarrollar? incuso juegos publicitarios, contáctanos y déjanos crear ese gran juego que
-                    tienes en mente</p>
+                    tienes en mente.</p>
                 </div>
               </div>
               <!--Card-->
