--- a/contact.html
+++ b/contact.html
@@ -232,7 +232,7 @@
                     <div class="md-form">
                       <i class="fas fa-pencil-alt prefix white-text"></i>
                       <textarea type="text" id="message" name="message" class="white-text form-control md-textarea" rows="5" required></textarea>
-                      <label for="message">Send message</label>
+                      <label for="message">Message</label>
                     </div>
                     <div class="text-center">
                       <button class="btn btn-outline-contact btn-rounded" onclick="validateForm();">Submit</button>
