implemented spanish language

--- a/es/contact.html
+++ b/es/contact.html
@@ -233,10 +233,10 @@
                     <div class="md-form">
                       <i class="fas fa-pencil-alt prefix white-text"></i>
                       <textarea type="text" id="message" name="message" class="white-text form-control md-textarea" rows="5" required></textarea>
-                      <label for="message">Enviar mensaje</label>
+                      <label for="message">Mensaje</label>
                     </div>
                     <div class="text-center">
-                      <button class="btn btn-outline-contact btn-rounded" onclick="validateForm();">Submit</button>
+                      <button class="btn btn-outline-contact btn-rounded" onclick="validateForm();">Enviar</button>
                     </div>
                     <div class="status"></div>
                     <!--Body-->
