implemented spanish language

--- a/es/frontend/commons/privacy_policy.html
+++ b/es/frontend/commons/privacy_policy.html
@@ -42,7 +42,7 @@
 
   <!-- Start of project here-->
   <div id="fb-root"></div>
-  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0"></script>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v7.0"></script>
   <!--Main Navigation-->
   <header id="page-top">
     <!-- Navbar -->
@@ -61,33 +61,33 @@
           <!-- Left -->
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="/index.html">Games</a>
+              <a class="nav-link waves-effect" href="../../index.html">Juegos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="/about.html">About us</a>
+              <a class="nav-link waves-effect" href="../../about.html">Nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="/projects.html">Projects</a>
+              <a class="nav-link waves-effect" href="../../projects.html">Proyectos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="/services.html">Services</a>
+              <a class="nav-link waves-effect" href="../../services.html">Servicios</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect disabled" href="/blog.html">Blog</a>
+              <a class="nav-link waves-effect disabled" href="../../blog.html">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect disabled" href="/store.html">Store</a>
+              <a class="nav-link waves-effect disabled" href="../../store.html">Tienda</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="/contact.html">Contact</a>
+              <a class="nav-link waves-effect" href="../../contact.html">Contacto</a>
             </li>
             <!-- Dropdown -->
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="fas fa-language"></i> Language </a>
+                <i class="fas fa-language"></i> Lenguaje </a>
               <div class="dropdown-menu dropdown-info" aria-labelledby="navbarDropdownMenuLink-4">
-                <a class="dropdown-item" href="http://soufunstudio.com/es">Spanish</a>
-                <a class="dropdown-item" href="http://soufunstudio.com/jp">Japanese</a>
+                <a class="dropdown-item" href="/">English</a>
+                <a class="dropdown-item" href="/jp">日本語</a>
               </div>
             </li>
           </ul>
@@ -149,7 +149,7 @@
           <!--Grid column-->
           <div class="col-md-4">
             <!--Twitter-->
-            <a href="https://twitter.com/SouFUNStudio?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="true" data-size="large" data-show-screen-name="false"></a>
+            <a href="https://twitter.com/SouFUNStudio?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="true" data-size="large" data-show-screen-name="false" data-lang="es"></a>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
           </div>
           <!--Grid column-->
@@ -172,18 +172,17 @@
         <div class="row">
           <!-- Grid column -->
           <div class="col-md-12 text-white">
-            <h3 class="text-uppercase mb-4 pt-5"><strong>privacy policy</strong></h3>
+            <h3 class="text-uppercase mb-4 pt-5"><strong>politica de privacidad</strong></h3>
 
-            <p class="text-left">This Privacy Policy establishes the terms in which SouFUN Studio
-              uses and protects the information that is provided by its users when using its
-              website and / or its applications. This company is committed to the security of
-              its user´s data. When we ask you to fill in the personal information fields with
-              which you can be identified, we do so ensuring that it will only be used in
-              accordance with the terms of this document. However, this Privacy Policy may change
-              over time or be updated for what we recommend and we emphasize continually reviewing
-              this page to ensure that you agree with such changes.</p>
+            <p class="text-left">La presente Política de Privacidad establece los términos en que SouFUN Studio usa
+              y protege la información que es proporcionada por sus usuarios al momento de utilizar su sitio web y/o
+              sus aplicaciones. Esta compañía está comprometida con la seguridad de los datos de sus usuarios. Cuando
+              le pedimos llenar los campos de información personal con la cual usted pueda ser identificado, lo hacemos
+              asegurando que sólo se empleará de acuerdo con los términos de este documento. Sin embargo esta Política
+              de Privacidad puede cambiar con el tiempo o ser actualizada por lo que le recomendamos y enfatizamos revisar
+              continuamente esta página para asegurarse que está de acuerdo con dichos cambios.</p>
 
-            <h3 class="text-uppercase mb-4 pt-5"><strong>information that is collected</strong></h3>
+            <h3 class="text-uppercase mb-4 pt-5"><strong>información que es recogida</strong></h3>
 
             <p class="text-left">Our website may collect personal information such as:
               Name, contact information such as your email address and demographic information. Likewise,
