implemented spanish language

--- a/es/contact.html
+++ b/es/contact.html
@@ -218,12 +218,12 @@
                     <div class="md-form">
                       <i class="fas fa-user prefix white-text"></i>
                       <input type="text" id="name" name="name" class="white-text form-control" required>
-                      <label for="name">Tu nombre</label>
+                      <label for="name">Nombre</label>
                     </div>
                     <div class="md-form">
                       <i class="fas fa-envelope prefix white-text"></i>
                       <input type="text" id="email" name="email" class="white-text form-control" required>
-                      <label for="email">Tu correo</label>
+                      <label for="email">Correo</label>
                     </div>
                     <div class="md-form">
                       <i class="fas fa-tag prefix white-text"></i>
@@ -281,7 +281,7 @@
                     <i class="fas fa-envelope fa-lg"></i>
                   </a>
                   <p class="pt-3">contact@soufunstudio.com</p>
-                  <p class="mb-0">socialmedia@soufunstudio.com</p>
+                  <p class="mb-0">socialmedia@<br>soufunstudio.com</p>
                 </div>
               </div>
             </div>
