implemented spanish language

--- a/es/contact.html
+++ b/es/contact.html
@@ -280,7 +280,7 @@
                   <a class="btn-contact waves-effect">
                     <i class="fas fa-envelope fa-lg"></i>
                   </a>
-                  <p class="pt-3">contact@soufunstudio.com</p>
+                  <p class="pt-3">contact@<br>soufunstudio.com</p>
                   <p class="mb-0">socialmedia@<br>soufunstudio.com</p>
                 </div>
               </div>
