--- a/es/frontend/commons/privacy_policy.html
+++ b/es/frontend/commons/privacy_policy.html
@@ -184,60 +184,58 @@
 
             <h3 class="text-uppercase mb-4 pt-5"><strong>información que es recogida</strong></h3>
 
-            <p class="text-left">Our website may collect personal information such as:
-              Name, contact information such as your email address and demographic information. Likewise,
-              when necessary, specific information may be required to process an order or make a delivery or billing.</p>
+            <p class="text-left">Nuestro sitio web podrá recoger información personal por ejemplo: Nombre, información de
+              contacto como; su dirección de correo electrónico e información demográfica. Así mismo cuando sea necesario
+              podrá ser requerida información específica para procesar algún pedido o realizar una entrega o facturación.</p>
 
-            <h3 class="text-uppercase mb-4 pt-5"><strong>use of collected information</strong></h3>
+            <h3 class="text-uppercase mb-4 pt-5"><strong>uso de la información recogida</strong></h3>
 
-            <p class="text-left">Our website uses the information to provide the best possible service,
-              particularly to keep track of users, orders if applicable, and to improve our products and services.
-              It is possible that emails may be sent periodically through our site with special offers, new products
-              and other advertising information that we consider relevant to you or that may provide you with benefits,
-              these emails will be sent to the address that you provide and may be canceled anytime.</p>
+            <p class="text-left">Nuestro sitio web emplea la información con el fin de proporcionar el mejor servicio posible,
+              particularmente para mantener un registro de usuarios, de pedidos en caso que aplique, y mejorar nuestros productos
+              y servicios. Es posible que sean enviados correos electrónicos periódicamente a través de nuestro sitio con ofertas
+              especiales, nuevos productos y otra información publicitaria que consideremos relevante para usted o que pueda
+              brindarle algún beneficio, estos correos electrónicos serán enviados a la dirección que usted proporcione y podrán
+              ser cancelados en cualquier momento.</p>
 
-            <p class="text-left">SouFUN Studio is highly committed to fulfilling the commitment to keep
-              your information secure. We use the most advanced systems and constantly update them to ensure that there
-              is no unauthorized access.</p>
+            <p class="text-left">SouFUN Studio está altamente comprometido para cumplir con el compromiso de mantener su información
+              segura. Usamos los sistemas más avanzados y los actualizamos constantemente para asegurarnos que no exista ningún acceso
+              no autorizado.</p>
 
             <h3 class="text-uppercase mb-4 pt-5"><strong>cookies</strong></h3>
 
-            <p class="text-left">A cookie refers to a file that is sent with the purpose of requesting
-              permission to be stored on your computer. By accepting this file, the cookie is created and then serves
-              to have information regarding web traffic, and also facilitates future visits to a website. recurrent.
-              Another function that cookies have is that with them the websites can recognize you individually and
-              therefore provide you with the best personalized service on their website.</p>
+            <p class="text-left">Una cookie se refiere a un fichero que es enviado con la finalidad de solicitar permiso para almacenarse
+              en su ordenador, al aceptar dicho fichero se crea y la cookie sirve entonces para tener información respecto al tráfico web,
+              y también facilita las futuras visitas a una web recurrente. Otra función que tienen las cookies es que con ellas las web
+              pueden reconocerte individualmente y por tanto brindarte el mejor servicio personalizado de su web.</p>
 
-            <p class="text-left">Our website uses cookies to identify the pages that are visited and
-              their frequency. This information is used only for statistical analysis and then the information is
-              permanently removed. You can delete cookies at any time from your computer. However, cookies help to
-              provide a better service for the websites, you do not give access to information from your computer
-              or from you, unless you want it and provide it directly, <a href="https://brightononline.ca/es/" target="_blank" class="badge badge-primary text-wrap">visits to a website</a>.
-              You can accept or deny the use of cookies, however most browsers accept cookies automatically as it
-              serves to have a better web service. You can also change the settings on your computer to decline cookies.
-              If they are declined you may not be able to use some of our services.</p>
+            <p class="text-left">Nuestro sitio web emplea las cookies para poder identificar las páginas que son visitadas y su frecuencia.
+              Esta información es empleada únicamente para análisis estadístico y después la información se elimina de forma permanente.
+              Usted puede eliminar las cookies en cualquier momento desde su ordenador. Sin embargo las cookies ayudan a proporcionar un
+              mejor servicio de los sitios web, estás no dan acceso a información de su ordenador ni de usted, a menos de que usted así lo
+              quiera y la proporcione directamente, cuando <a href="https://brightononline.ca/es/" target="_blank" class="badge badge-primary text-wrap">visitas a una web</a>.
+              . Usted puede aceptar o negar el uso de cookies, sin embargo la mayoría de navegadores aceptan cookies automáticamente pues
+              sirve para tener un mejor servicio web. También usted puede cambiar la configuración de su ordenador para declinar las cookies.
+              Si se declinan es posible que no pueda utilizar algunos de nuestros servicios.</p>
 
-            <h3 class="text-uppercase mb-4 pt-5"><strong>links to third parties</strong></h3>
+            <h3 class="text-uppercase mb-4 pt-5"><strong>enlaces a terceros</strong></h3>
 
-            <p class="text-left">This website and / or the SouFUN Studio applications may contain
-              links to other sites that may be of interest to you. Once you click on these links and leave our page,
-              we no longer have control over the site you are redirected to and therefore we are not responsible for
-              the terms or privacy or the protection of your data on those other third party sites. These sites are
-              subject to their own privacy policies, so it is recommended that you consult them to confirm that you
-              agree with them.</p>
+            <p class="text-left">Este sitio web y/o las aplicaciones de SouFUN Studio pudiern contener en laces a otros sitios que pudieran
+              ser de su interés. Una vez que usted de clic en estos enlaces y abandone nuestra página, ya no tenemos control sobre al sitio
+              al que es redirigido y por lo tanto no somos responsables de los términos o privacidad ni de la protección de sus datos en esos
+              otros sitios terceros. Dichos sitios están sujetos a sus propias políticas de privacidad por lo cual es recomendable que los
+              consulte para confirmar que usted está de acuerdo con estas.</p>
 
-            <h3 class="text-uppercase mb-4 pt-5"><strong>control of your personal information</strong></h3>
+            <h3 class="text-uppercase mb-4 pt-5"><strong>control de su información personal</strong></h3>
 
-            <p class="text-left">At any time you can restrict the collection or use of personal information
-              that is provided to our website and / or applications. Every time you are asked to fill out a form, such as
-              the user registration, you can check or uncheck the option to receive information by email. In case you have
-              checked the option to receive our newsletter or advertisement you can cancel it at any time.</p>
+            <p class="text-left">En cualquier momento usted puede restringir la recopilación o el uso de la información personal que es proporcionada
+              a nuestro sitio web y/o aplicaciones. Cada vez que se le solicite rellenar un formulario, como el de alta de usuario, puede
+              marcar o desmarcar la opción de recibir información por correo electrónico. En caso de que haya marcado la opción de recibir nuestro boletín
+              o publicidad usted puede cancelarla en cualquier momento.</p>
 
-            <p class="text-left">This company will not sell, assign or distribute the personal information
-              that is collected without your consent, unless required by a judge with a court order.</p>
+            <p class="text-left">Esta compañía no venderá, cederá ni distribuirá la información personal que es recopilada sin su consentimiento,
+              salvo que sea requerido por un juez con un orden judicial.</p>
 
-            <p class="text-left">SouFUN Studio reserves the right to change the terms of this
-              Privacy Policy at any time.</p>
+            <p class="text-left">SouFUN Studio Se reserva el derecho de cambiar los términos de la presente Política de Privacidad en cualquier momento.</p>
 
           </div>
           <!-- Grid column -->
