implemented spanish language

--- a/es/frontend/commons/privacy_policy.html
+++ b/es/frontend/commons/privacy_policy.html
@@ -239,13 +239,9 @@
 
           </div>
           <!-- Grid column -->
-
         </div>
         <!-- Grid row -->
-
       </div>
-
-
     </div>
     <!--Main container-->
   </main>
@@ -261,7 +257,7 @@
         <!-- Grid column -->
         <div class="col-md-6 mt-md-0 mt-3">
           <!-- Content -->
-          <h5 class="text-uppercase">Connect with us! <i class="fas fa-heart red-text mx-1"></i> </h5>
+          <h5 class="text-uppercase">Conéctate con nosotros! <i class="fas fa-heart red-text mx-1"></i> </h5>
           <!-- Grid column -->
           <div class="col-md-12 py-4">
             <div class="mb-5 hoverable-icon">
@@ -287,7 +283,7 @@
         <!-- Grid column -->
         <div class="col-md-3 mb-md-0 mb-3">
           <!-- Links -->
-          <h5 class="text-uppercase">Contact Us</h5>
+          <h5 class="text-uppercase">Contáctanos</h5>
           <ul class="list-unstyled hoverable-text">
             <li>
               <a href="https://web.whatsapp.com" target="_blank"><i class="fas fa-phone-alt"></i> +521 5515990967</a>
@@ -296,7 +292,7 @@
               <a href="mailto:contact@soufunstudio.com">contact@soufunstudio.com</a>
             </li>
             <li>
-              <a href="/contact.html">Av. San Francisco Tlaltenco
+              <a href="../../contact.html">Av. San Francisco Tlaltenco
                 Ciudad de México, Cd. de México</a>
             </li>
           </ul>
@@ -306,16 +302,16 @@
         <!-- Grid column -->
         <div class="col-md-3 mb-md-0 mb-3">
           <!-- Links -->
-          <h5>SouFunStudio</h5>
+          <h5>SouFun Studio</h5>
           <ul class="list-unstyled hoverable-text">
             <li>
-              <a class="js-scroll-trigger" href="#page-top">Privacy policy</a>
+              <a class="js-scroll-trigger" href="#page-top">Política de privacidad</a>
             </li>
             <li>
-              <a href="terms_of_use.html">Terms of use</a>
+              <a href="terms_of_use.html">Términos de uso</a>
             </li>
             <li>
-              <a href="/contact.html">Sitemap</a>
+              <a href="../../contact.html">Mapa del sitio</a>
             </li>
             <li>
               <a href="../info/faqs.html">FAQ</a>
@@ -338,7 +334,7 @@
           <img src="/img/brand/soufun-solid-logo.png" class="img-fluid" alt="soufun-solid-logo"></a>
         </li>
         <li class="list-inline-item">
-          <a href="https://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&id=OFL" target="_blank">Sen font is licensed under the OFL.</a>
+          <a href="https://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&id=OFL" target="_blank">La fuente Sen tiene licencia bajo OFL.</a>
         </li>
       </ul>
     </div>
