--- a/es/frontend/commons/terms_of_use.html
+++ b/es/frontend/commons/terms_of_use.html
@@ -172,7 +172,7 @@
         <div class="row">
           <!-- Grid column -->
           <div class="col-md-12 text-white">
-            <h3 class="text-uppercase mb-4 pt-5"><strong>Terms and Conditions</strong></h3>
+            <h3 class="text-uppercase mb-4 pt-5"><strong>Términos y Condiciones</strong></h3>
 
             <p class="text-left">Última actualización: Junio 26, 2020</p>
             <p class="text-left">Por favor lea estos términos y condiciones detenidamente antes de utilizar nuestro servicio.</p>
