implemented spanish language

--- a/es/frontend/commons/terms_of_use.html
+++ b/es/frontend/commons/terms_of_use.html
@@ -362,8 +362,8 @@
             <ul class="text-left">
               <li>Por correo: legal@soufunstudio.com</li>
               <li>Al visitar esta página en nuestro sitio web:
-                <a class="text-white badge badge-primary text-wrap" href="http://www.soufunstudio.com/contact.html">
-                  www.soufunstudio.com/contact.html
+                <a class="text-white badge badge-primary text-wrap" href="../../contact.html">
+                  www.soufunstudio.com/es/contact.html
                 </a>
               </li>
               <li>Por número telefónico: +521 5515990967</li>
