correct modal title

--- a/projects.html
+++ b/projects.html
@@ -246,7 +246,7 @@
         <div class="modal-dialog modal-lg modal-dialog-scrollable" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title w-100 text-dark" id="projectLabel">Game Project Date</h4>
+              <h4 class="modal-title w-100 text-dark" id="projectLabel">Release Date</h4>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
@@ -287,7 +287,7 @@
         <div class="modal-dialog modal-lg modal-dialog-scrollable" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title w-100 text-dark" id="projectLabel">Game Project Date</h4>
+              <h4 class="modal-title w-100 text-dark" id="projectLabel">Release Date</h4>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
