--- a/frontend/commons/terms_of_use.html
+++ b/frontend/commons/terms_of_use.html
@@ -86,7 +86,7 @@
               <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <i class="fas fa-language"></i> Language </a>
               <div class="dropdown-menu dropdown-info" aria-labelledby="navbarDropdownMenuLink-4">
-                <a class="dropdown-item" href="/es">Spanish</a>
+                <a class="dropdown-item" href="/es">Español</a>
                 <a class="dropdown-item" href="/jp">日本語</a>
               </div>
             </li>
