implemented spanish language

--- a/es/frontend/games/xord.html
+++ b/es/frontend/games/xord.html
@@ -302,8 +302,8 @@
               <!-- Grid column -->
               <div class="col-md-6 p-5">
 
-                <h2 class="h2 mb-4 text-dark">NDisponible Ahora</h2>
-                <p class="mb-4 dark-grey-text">Nuestra está disponible para dispositivos android! Descarga ahora para comenzar!</p>
+                <h2 class="h2 mb-4 text-dark">Disponible Ahora</h2>
+                <p class="mb-4 dark-grey-text">Nuestra app está disponible para dispositivos android! Descarga ahora para comenzar!</p>
                 <a href="https://play.google.com/store/apps/details?id=com.soufunstudio.XorD&hl=es" class="btn btn-outline-download waves-effect btn-md rounded-pill" target="_blank">
                   <i class="fab fa-google-play fa-md pr-1"></i> Google Play</a>
 
@@ -313,7 +313,7 @@
 
                 <form class="col-md-9 input-grey pl-0" action="" method="post" target="_blank">
                   <div class="input-group mb-3">
-                    <input type="text" class="form-control dark-grey-text border-0 z-depth-0" placeholder="Enter Email Address" aria-label="Enter Email Address" aria-describedby="button-addon2">
+                    <input type="text" class="form-control dark-grey-text border-0 z-depth-0" placeholder="Ingresar Correo" aria-label="Enter Email Address" aria-describedby="button-addon2">
                     <div class="input-group-append">
                       <button class="btn btn-md cyan darken-2 m-0 px-3 py-2 z-depth-0 rounded-right" type="button" id="button-addon2">Registrarse<i class="fas fa-arrow-right pl-2"></i></button>
                     </div>
