--- a/es/frontend/games/quimiuami.html
+++ b/es/frontend/games/quimiuami.html
@@ -320,7 +320,7 @@
 
                 <form class="col-md-9 input-grey pl-0" action="" method="post" target="_blank">
                   <div class="input-group mb-3">
-                    <input type="text" class="form-control dark-grey-text border-0 z-depth-0" placeholder="Enter Email Address" aria-label="Enter Email Address" aria-describedby="button-addon2">
+                    <input type="text" class="form-control dark-grey-text border-0 z-depth-0" placeholder="Ingresar Correo" aria-label="Enter Email Address" aria-describedby="button-addon2">
                     <div class="input-group-append">
                       <button class="btn btn-md cyan darken-2 m-0 px-3 py-2 z-depth-0 rounded-right" type="button" id="button-addon2">Registrarse<i class="fas fa-arrow-right pl-2"></i></button>
                     </div>
