implemented spanish language

--- a/es/frontend/games/uami_vr.html
+++ b/es/frontend/games/uami_vr.html
@@ -283,8 +283,8 @@
               <!--Grid column-->
               <div class="col-md-6 p-5">
 
-                <h2 class="h2 mb-4 text-dark pb-2 pt-5">Mantente Actualizado</h2>
-                <p class="mb-4 dark-grey-text pt-2">Suscríbete a nuestro boletín para estar siempre al tanto de nuestras nuevas actualizaciones.</p>
+                <h2 class="h2 mb-4 text-dark">Mantente Actualizado</h2>
+                <p class="mb-4 dark-grey-text">Suscríbete a nuestro boletín para estar siempre al tanto de nuestras nuevas actualizaciones.</p>
 
                 <!--Form newsletter-->
                 <form class="col-md-9 input-grey pl-0" action="" method="post" target="_blank">
