change mockup title to UAMI-VR

--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -302,7 +302,7 @@
             <div class="row d-flex justify-content-center">
               <div class="col-md-6 text-center">
                 <div class="dark-grey-text text-center">
-                  <h2>UAM-I-VR</h2>
+                  <h2>UAMI-VR</h2>
                 </div>
               </div>
             </div>
