--- a/es/frontend/games/quimiuami.html
+++ b/es/frontend/games/quimiuami.html
@@ -86,7 +86,7 @@
             <!-- Dropdown -->
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="fas fa-language"></i> Laenguaje </a>
+                <i class="fas fa-language"></i> Lenguaje </a>
               <div class="dropdown-menu dropdown-info" aria-labelledby="navbarDropdownMenuLink-4">
                 <a class="dropdown-item" href="/">English</a>
                 <a class="dropdown-item" href="/jp">日本語</a>
