implemented japanese language

--- a/jp/frontend/games/uami_vr.html
+++ b/jp/frontend/games/uami_vr.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="ja">
 
 <head>
   <meta charset="UTF-8">
@@ -56,7 +56,7 @@
 
   <!-- Start of project here-->
   <div id="fb-root"></div>
-  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v7.0"></script>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v7.0"></script>
   <!--Main Navigation-->
   <header id="page-top">
     <!-- Navbar -->
@@ -163,7 +163,7 @@
           <!--Grid column-->
           <div class="col-md-4">
             <!--Twitter-->
-            <a href="https://twitter.com/SouFUNStudio?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="true" data-size="large" data-show-screen-name="false" data-lang="es"></a>
+            <a href="https://twitter.com/SouFUNStudio?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="true" data-size="large" data-show-screen-name="false" data-lang="ja"></a>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
           </div>
           <!--Grid column-->
