--- a/about.html
+++ b/about.html
@@ -624,7 +624,7 @@
           <h5 class="text-uppercase">Contact Us</h5>
           <ul class="list-unstyled hoverable-text">
             <li>
-              <a href="https://web.whatsapp.com" target="_blank"><i class="fas fa-phone-alt"></i> +521 5515990967</a>
+              <a href="https://web.whatsapp.com" target="_blank"><i class="fas fa-phone-alt"></i>Not Disponible</a>
             </li>
             <li>
               <a href="mailto:contact@soufunstudio.com">contact@soufunstudio.com</a>
